# swagger.yaml
@@ -394,18 +394,6 @@ paths:
         500:
           description: server error
   /balance/cards:
-    post:
-      tags:
-      - Balance
-      summary: Привязать карту
-      parameters:
-      - in: body
-        name: body
-        schema:
-          $ref: '#/definitions/card'
-      responses:
-        200:
-          description: OK
     get:
       tags:
       - Balance
@@ -447,129 +435,11 @@ paths:
             result_url:
               type: string
               description: redirect to this url after pay
-      responses:
-        200:
-          description: hold wait (go to second part)
-  /balance/hold:
-    post:
-      tags:
-      - Balance
-      summary: Payment with hold action(first part)
-      parameters:
-      - in: body
-        name: body
-        schema:
-          type: object
-          properties:
-            amount:
-              type: number
-            description:
-              type: string
-            cardNumber:
-              type: string
-            cardMonth:
-              type: string
-            cardYear:
-              type: string
-            cvv:
+            cardId:
               type: string
       responses:
         200:
           description: hold wait (go to second part)
-        402:
-          description: Error on liqpay
-        500:
-          description: server error
-  /balance/hold_completion:
-    put:
-      tags:
-      - Balance
-      summary: Confirm payment with action the hold
-      parameters:
-      - in: body
-        name: body
-        schema:
-          type: object
-          properties:
-            orderId:
-              type: string
-      responses:
-        200:
-          description: success
-        402:
-          description: Error on liqpay
-        500:
-          description: server error
-  /balance/subscribe:
-    post:
-      tags:
-      - Balance
-      summary: create subscribe
-      parameters:
-      - in: body
-        name: body
-        schema:
-          type: object
-          properties:
-            amount:
-              type: number
-            description:
-              type: string
-            cardNumber:
-              type: string
-            cardMonth:
-              type: string
-            cardYear:
-              type: string
-            cvv:
-              type: string
-      responses:
-        200:
-          description: success
-        402:
-          description: Error on liqpay
-        500:
-          description: server error
-  /balance/cancel_hold:
-    put:
-      tags:
-      - Balance
-      summary: cancel hold
-      parameters:
-      - in: body
-        name: body
-        schema:
-          type: object
-          properties:
-            orderId:
-              type: string
-      responses:
-        200:
-          description: success
-        402:
-          description: Error on liqpay
-        500:
-          description: server error
-  /balance/cancel_subscribe:
-    put:
-      tags:
-      - Balance
-      summary: cancel subscribe
-      parameters:
-      - in: body
-        name: body
-        schema:
-          type: object
-          properties:
-            orderId:
-              type: string
-      responses:
-        200:
-          description: success
-        402:
-          description: Error on liqpay
-        500:
-          description: server error
   /balance/status:
     get:
       tags:
